@@ -1,19 +1,20 @@
 package swarm;
 
 public class SwarmEnvironment {
-    public static Class globalZone;
-    static {
-        System.out.println("Trying to load lib!\n");
-	try {
-            globalZone = Class.forName ("swarm.GlobalZone");
-	    System.loadLibrary("javaswarm");
-	} catch (Exception e) {
-	    System.err.println("Exception caught: " + e.getMessage());
-	} 
-	System.out.println("Lib loaded!\n");
+  static {
+    System.out.println ("Trying to load lib!\n");
+    try {
+      System.loadLibrary ("javaswarm");
     }
-    public native static void initSwarm(String args[]);
-    public SwarmEnvironment (String args[]) {
-        initSwarm(args);
-    }
+    catch (Exception e) {
+      System.err.println ("Exception caught: " + e.getMessage());
+    } 
+    System.out.println ("Lib loaded!\n");
+  }
+  public native static void initSwarm(String args[]);
+  public GlobalZone globalZone;
+  public SwarmEnvironment (String args[]) {
+    globalZone = new GlobalZone ();
+    initSwarm (args);
+  }
 }
